--- a/index.html
+++ b/index.html
@@ -5,11 +5,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Expense tracker</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- css stylesheet -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/998d324206.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
+    <header>
+        <h1 class="text-center pt-5">Expense tracker <img class="icon" src="images/dollar-sign-solid.svg" alt="">
+        </h1>
+    </header>
+    <main>
+        <div class="container d-flex align-items-center justify-content-center">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6 half-width">
+                    <img src="images/bg-money.jpeg" class="pt-5 w-100" alt="">
+                </div>
+                <div
+                    class="backgroundColor half-width col-sm-12 mt-5 mb-2 col-lg-6 container d-flex align-items-center justify-content-center p-3">
+                    <div>
+                        <h5 class="pl-5 pb-1">Income</h5>
+                        <div class="row">
+                            <h6>Income: </h6>
+                            <input type="text" class="border mb-4 ml-4 p-1 block rounded" name="" id="income-input"
+                                placeholder="">
+                        </div>
+                        <h5 class="pl-5 pb-1">Expenses</h5>
+                        <div class="row">
+                            <h6>Food: </h6>
+                            <input type="text" class="border mb-4 ml-5 p-1 block rounded" name="" id="food-input"
+                                placeholder="">
+                        </div>
+                        <div class="row">
+                            <h6>Rent: </h6>
+                            <input type="text" class="border mb-4 ml-5 p-1 block rounded" name="" id="rent-input"
+                                placeholder="">
+                        </div>
+                        <div class="row">
+                            <h6 class="mr-2">Cloths:</h6>
+                            <input type="text" class="border mb-4 ml-4 p-1 block rounded" name="" id="cloths-input"
+                                placeholder="">
+                        </div>
+                        <button id="calculate-button" type="submit"
+                            class="px-4 py-2 ml-5 mb-3 bg-primary text-white rounded">Calculate</button>
+                        <h5 class="pb-2 pl-5">Total Expenses : <span id="total-expense"></span></h5>
+                        <h5 class="pb-2 pl-5">Balance : <span id="total-balance"></span></h5>
+                        <div class="row">
+                            <h6>Save:</h6>
+                            <input type="text" class="border mb-4 ml-5 p-1 block rounded" name="" id="percent-input"
+                                placeholder="">
+                            <h6 class="p-2">%</h6>
+                            <button id="save-button" type="submit"
+                                class="px-2 py-1 mb-3 bg-primary text-white rounded">Save</button>
+                        </div>
+                        <h5 class="pl-5 pb-1">Saving Amount : <span id="total-saving"></span></h5>
+                        <h5 class="pl-5">Remaining Balance : <span id="remaining-balance"></span></h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="notify-section">
+            <p id="string-fail" class="error">❌ Amount can not be a string. Please enter a number.</p>
+            <p id="expense-fail" class="error">❌ Expenses can not be greater than Income.</p>
+            <p id="saving-fail" class="error">❌ You can not save more than your remaining balance.</p>
+            <p id="negative-fail" class="error">❌ Amount can not be negative. Please enter a positive number.
+            </p>
+        </div>
+    </main>
+    <!-- bootstrap script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
+    <script src="js/money.js"></script>
 </body>
 
 </html>
